Crea Maper de los difentes modelo y DTO

--- a/SistemaVentas.Utilidades/SistemaVentas.Utilidades.csproj
+++ b/SistemaVentas.Utilidades/SistemaVentas.Utilidades.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SistemaVentas.DTO\SistemaVentas.DTO.csproj" />
     <ProjectReference Include="..\SistemaVentas.Modelo\SistemaVentas.Modelo.csproj" />
   </ItemGroup>
